# cam-simulator

./: .gitignore  4_menus_report.json  ALL_4_LEVEL2_MENUS_GUIDE.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  EXAMPLES.md  LEARNING_AUTOMATION_GUIDE.md  LEVEL2_MENU_GUIDE.md  LICENSE  QUICK_REFERENCE_4_MENUS.md  QUICK_START.txt  QUICK_START_AUTO.md  README.md  README_AUTO_BOT.md  RECOGNITION_OPTIMIZATION.md  UPDATE_WINDOW_TITLE.md  UPDATE_v1.1.0.txt  USAGE_GUIDE.md  WAIT_MODE_GUIDE.md  WINDOW_TITLE_GUIDE.md  all_28_courses_coordinates.json  analyze_features.py  analyze_learning_menu.py  analyze_level2_menu.py  analyze_list_and_click.py  analyze_list_structure.py  auto_click_script.py  auto_learning_bot.py  auto_learning_clicker.py  complete_menu_structure.json  create_test_video.py  features_report.json  find_window_demo.py  install_windows.bat  learning_menu_report.json  level2_menu_report.json  list_structure_report.json  optimized_recognizer.py  process_all_4_menus.py  quick_start_bot.py  (+10 more)
cpp_version/: CMakeLists.txt  README_CPP.md  virtual_camera.cpp
